sea1/bastion/files/iptables-rules.v4
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]

-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited

-A FORWARD -j REJECT --reject-with icmp-host-prohibited

# Chain to accept Wobscale admins
:WOBSCALE_ADMIN -
-A WOBSCALE_ADMIN -m owner --uid-owner ianweller -j ACCEPT
-A WOBSCALE_ADMIN -j RETURN

# Rules for limiting network access to specific machines by specific users
-A OUTPUT -d 10.255.255.254 -j ACCEPT
-A OUTPUT -d 10.255.255.0/24 -m owner --uid-owner root -j ACCEPT
# Shared infrastructure
-A OUTPUT -d 10.255.255.5 -j WOBSCALE_ADMIN
-A OUTPUT -d 10.255.255.10 -j WOBSCALE_ADMIN
-A OUTPUT -d 10.255.255.11 -j WOBSCALE_ADMIN
-A OUTPUT -d 10.255.255.253 -j WOBSCALE_ADMIN
# Client machines
-A OUTPUT -d 10.255.255.100 -m owner --uid-owner ianweller -j ACCEPT
-A OUTPUT -d 10.255.255.101 -m owner --uid-owner esk -j ACCEPT
-A OUTPUT -d 10.255.255.102 -m owner --uid-owner jbury -j ACCEPT
# Block all other requests to the management subnet
-A OUTPUT -d 10.255.255.0/24 -j REJECT

COMMIT
